0.2.4
=====

* Fixes bug in stubs on types by preventing secondary initialization

0.2.3
=====

* Mock objects report parameters and method name when raising UnexpectedCall
* Fixed global namespace manipulation on deeply nested Chai subclasses

0.2.2
=====

* UnexpectedCall is now a BaseException which is re-raised as an AssertionError 
in Chai metaclass `test_wrapper` method. This decreases the chance that 
UnexpectedCall will be caught by the application code being tested.

0.2.1
=====

* Allow variables in returns(), effectively treating the variable as a regex capture.

0.2.0
=====

* Merge pull request to close issue #2

0.1.23
======

* side_effect is passed the arguments of the expectation if it doesn't define
its own arguments

0.1.22
======

* side_effect takes arguments after the method to eliminate need for a lambda

0.1.21
======

* Fixed a bug with (un)stubbing of a module attribute which is really a classmethod
* Added support for `with` statement on expectations, see README for usage
* Fixed (un)stubbing of methods originally defined on `object` class

0.1.20
======

* Added __eq__ to all comparators so that they can be used inside data structures.

0.1.19
======

* Fixed failure to teardown stub on __new__ after `expect(type)`

0.1.18
======

* Simplified stubbing of object creation, so that `expect(type)` can be used as
  if it was mocking __init__, but return an object as if it was mocking __new__.

0.1.17
======

* Fix edge case where an attribute might not be defined on a class when
  calling stub(obj, 'attr').

0.1.16
======

* Added Mock.__nonzero__ to re-support "if exists" code, which was broken by
  the addition of Mock.__len__.

0.1.15
======

* Added container and context manager interfaces to Mock object

0.1.14
======

* Added 'any_args' expectation modifier and 'like' comparator. See documentaion
  for details.

0.1.13
======

* Added 'var' comparator for ability to assert that the same argument was used